--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "chalk": "<5",
-    "effect": "3.2.7",
+    "effect": "3.2.9",
     "fs-extra": "^11.1.0",
     "ts-pattern": "^5.1.2",
     "yargs": "^17.6.2"
@@ -23,13 +23,14 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^2.1.0",
     "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.13.0",
+    "@types/node": "^20.14.2",
     "@types/yargs": "^17.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "@vitest/coverage-v8": "^1.6.0",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.0.0",
+    "effect-errors": "^1.4.8",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -37,9 +38,10 @@
     "eslint-plugin-markdown": "^5.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vitest": "^0.5.4",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.1",
     "readme-package-icons": "^1.1.14",
     "tscpaths": "^0.0.9",
+    "tsx": "^4.11.2",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
