--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   "dependencies": {
     "axios": "^1.7.2",
     "chalk": "<5",
-    "effect": "3.3.1",
+    "effect": "3.4.5",
     "fs-extra": "^11.1.0",
     "ts-pattern": "^5.2.0",
     "yargs": "^17.6.2"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.1.0",
+    "@stylistic/eslint-plugin": "^2.3.0",
     "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.9",
     "@types/yargs": "^17.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "@vitest/coverage-v8": "^1.6.0",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.0.0",
@@ -41,8 +41,8 @@
     "prettier": "^3.3.2",
     "readme-package-icons": "^1.1.14",
     "tscpaths": "^0.0.9",
-    "tsx": "^4.15.4",
-    "typescript": "^5.4.5",
+    "tsx": "^4.15.8",
+    "typescript": "^5.5.2",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
@@ -60,5 +60,6 @@
     "test-dev": "vitest --coverage",
     "test-coverage": "vitest run --coverage",
     "sync-icons": "pnpm generateReadmeIcons -h 50"
-  }
+  },
+  "packageManager": "pnpm@9.4.0"
 }
