--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "prettier": "^3.3.2",
     "readme-package-icons": "^1.1.14",
     "tscpaths": "^0.0.9",
-    "tsx": "^4.15.8",
+    "tsx": "^4.16.0",
     "typescript": "^5.5.2",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
@@ -53,7 +53,7 @@
     "build": "del-cli ./dist && tsc --project tsconfig.prod.json && tscpaths -p tsconfig.prod.json -s ./src -o ./dist",
     "postbuild": "pnpm copy-package && pnpm copy-readme",
     "cli": "node ./dist/cli/generateBadges.cli.js -o ./badges -c ./coverage/coverage-summary.json",
-    "dev": "ts-node -r tsconfig-paths/register ./src/tests-related/generate.ts",
+    "dev-values": "tsx ./src/tests/generateFromValues.ts",
     "lint": "eslint ./src",
     "test": "vitest",
     "test-ci": "vitest --coverage --run",
