feat: layers rewrite

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,15 @@
 name: ⚡ Publish
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ['⚡ Integration checks']
+    branches: [main]
+    types:
+      - completed
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   publish:
@@ -11,31 +17,26 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.12.1
-
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 📦 Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: latest
+      - name: 📦 Setup bun
+        uses: oven-sh/setup-bun@v2
 
       - name: ⎔ Setup node
         uses: actions/setup-node@v4
         with:
           node-version-file: '.node-version'
           registry-url: 'https://registry.npmjs.org'
-          cache: 'pnpm'
+          # cache: 'bun'
           cache-dependency-path: ./package.json
 
       - name: 📥 Install deps
-        run: pnpm install --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: ✏️ Bump package version
         id: bumping-version
-        uses: jpb06/bump-package@v2.5.14
+        uses: jpb06/bump-package@latest
         with:
           major-keywords: BREAKING CHANGE
           minor-keywords: feat,minor
@@ -45,7 +46,7 @@ jobs:
           commit-user-email: jpb.06@outlook.com
 
       - name: ⚙️ Building package
-        run: pnpm build
+        run: bun run build
 
       - name: 🚀 Publish package
         if: steps.bumping-version.outputs.bump-performed == 'true'
