--- a/package.json
+++ b/package.json
@@ -2,64 +2,77 @@
   "name": "node-coverage-badges",
   "description": "Generating coverage badges from jest",
   "version": "1.1.1",
-  "main": "index.js",
   "repository": "https://github.com/jpb06/node-coverage-badges.git",
   "author": "jpb06 <jpb.06@outlook.com>",
   "bin": {
-    "generateBadges": "./cli/generateBadges.cli.js"
+    "generateBadges": "./cjs/cli/generate-badges.cli.js",
+    "generateBadgesEsm": "./esm/cli/generate-badges.cli.js"
   },
   "engines": {
     "node": "20.x"
   },
   "license": "MIT",
-  "dependencies": {
-    "axios": "^1.7.2",
-    "chalk": "<5",
-    "effect": "3.5.1",
-    "fs-extra": "^11.1.0",
-    "ts-pattern": "^5.2.0",
-    "yargs": "^17.6.2"
-  },
-  "devDependencies": {
-    "@stylistic/eslint-plugin": "^2.3.0",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.14.10",
-    "@types/yargs": "^17.0.20",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "@vitest/coverage-v8": "^2.0.2",
-    "copyfiles": "^2.4.1",
-    "del-cli": "^5.0.0",
-    "effect-errors": "^1.4.11",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vitest": "^0.5.4",
-    "prettier": "^3.3.2",
-    "readme-package-icons": "^1.1.14",
-    "tscpaths": "^0.0.9",
-    "tsx": "^4.16.2",
-    "typescript": "^5.5.3",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.0.2"
+  "type": "module",
+  "main": "./cjs/index.js",
+  "module": "./esm/index.js",
+  "types": "./dts/index.d.ts",
+  "exports": {
+    ".": {
+      "require": {
+        "default": "./cjs/index.js",
+        "types": "./dts/index.d.ts"
+      },
+      "import": {
+        "default": "./esm/index.js",
+        "types": "./dts/index.d.ts"
+      }
+    }
   },
   "scripts": {
+    "update-deps": "bunx npm-check-updates --root --format group -i",
     "copy-package": "copyfiles package.json ./dist/",
     "copy-readme": "copyfiles README.md ./dist/",
-    "type-check": "tsc --project tsconfig.prod.json --noEmit",
-    "build": "del-cli ./dist && tsc --project tsconfig.prod.json && tscpaths -p tsconfig.prod.json -s ./src -o ./dist",
-    "postbuild": "pnpm copy-package && pnpm copy-readme",
-    "cli": "node ./dist/cli/generateBadges.cli.js -o ./badges -c ./coverage/coverage-summary.json",
-    "dev-values": "tsx ./src/tests/generateFromValues.ts",
-    "lint": "eslint ./src",
+    "build": "del-cli ./dist && bun build-esm && bun build-cjs",
+    "build-for-test": "del-cli ./src/tests/mock-data/frozen-dist && tsc --project tsconfig.esm.json --outDir ./src/tests/mock-data/frozen-dist/esm --declarationDir ./src/tests/mock-data/frozen-dist/dts && tsc --project tsconfig.cjs.json --outDir ./src/tests/mock-data/frozen-dist/cjs",
+    "build-esm": "tsc --project tsconfig.esm.json",
+    "build-cjs": "tsc --project tsconfig.cjs.json",
+    "postbuild-cjs": "echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
+    "postbuild-esm": "echo '{\"type\": \"module\"}' > dist/esm/package.json",
+    "postbuild": "bun run copy-package && bun run copy-readme && bun resolve-ts-paths-esm",
+    "cli": "node ./dist/esm/cli/generate-badges.cli.js -o ./badges -c ./coverage/coverage-summary.json",
+    "dev-values": "tsx ./src/tests/generate-from-values.ts",
+    "type-check": "tsc --project tsconfig.type-check.json --noEmit",
+    "format": "biome format --write ./src",
+    "format-ci": "biome format ./src",
+    "lint": "biome lint ./src",
+    "lint-fix": "biome lint --write ./src",
     "test": "vitest",
     "test-ci": "vitest --coverage --run",
     "test-dev": "vitest --coverage",
     "test-coverage": "vitest run --coverage",
-    "sync-icons": "pnpm generateReadmeIcons -h 50"
+    "sync-icons": "bun generateReadmeIcons -h 50"
   },
-  "packageManager": "pnpm@9.4.0"
+  "dependencies": {
+    "@effect/platform": "^0.70.4",
+    "comment-json": "^4.2.5",
+    "effect": "3.11.3",
+    "picocolors": "^1.1.1",
+    "yargs": "^17.7.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.10.1",
+    "@types/yargs": "^17.0.33",
+    "@vitest/coverage-v8": "^2.1.8",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^6.0.0",
+    "effect-errors": "^1.7.39",
+    "readme-package-icons": "^1.1.16",
+    "ts-paths-resolver": "^1.2.7",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8",
+    "vitest-mock-extended": "^2.0.2"
+  }
 }
