--- a/biome.json
+++ b/biome.json
@@ -2,10 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
   "organizeImports": { "enabled": true },
   "files": {
-    "ignore": [
-      "./src/tests/mock-data/dist",
-      "./src/tests/mock-data/frozen-dist"
-    ]
+    "ignore": []
   },
   "linter": {
     "enabled": true,
@@ -131,7 +128,10 @@
         },
         "useForOf": "error",
         "useFragmentSyntax": "error",
-        "useImportType": "error",
+        "useImportType": {
+          "level": "error",
+          "fix": "safe"
+        },
         "useLiteralEnumMembers": "error",
         "useNodejsImportProtocol": "error",
         "useNumericLiterals": "error",
