chore: use taze for deps bump

--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     }
   },
   "scripts": {
-    "update-deps": "bunx npm-check-updates --root --format group -i",
+    "update-deps": "taze -f -I",
+    "cleanDist": "rm -rf ./dist",
     "copy-package": "copyfiles package.json ./dist/",
     "copy-readme": "copyfiles README.md ./dist/",
-    "build": "del-cli ./dist && bun build-esm && bun build-cjs",
-    "build-for-test": "del-cli ./src/tests/mock-data/frozen-dist && tsc --project tsconfig.esm.json --outDir ./src/tests/mock-data/frozen-dist/esm --declarationDir ./src/tests/mock-data/frozen-dist/dts && tsc --project tsconfig.cjs.json --outDir ./src/tests/mock-data/frozen-dist/cjs",
+    "build": "bun cleanDist && bun build-esm && bun build-cjs",
+    "build-for-test": "rm -rf ./src/tests/mock-data/frozen-dist && tsc --project tsconfig.esm.json --outDir ./src/tests/mock-data/frozen-dist/esm --declarationDir ./src/tests/mock-data/frozen-dist/dts && tsc --project tsconfig.cjs.json --outDir ./src/tests/mock-data/frozen-dist/cjs",
     "build-esm": "tsc --project tsconfig.esm.json",
     "build-cjs": "tsc --project tsconfig.cjs.json",
     "postbuild-cjs": "echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
@@ -65,9 +66,9 @@
     "@types/yargs": "^17.0.33",
     "@vitest/coverage-v8": "^2.1.8",
     "copyfiles": "^2.4.1",
-    "del-cli": "^6.0.0",
     "effect-errors": "^1.8.4",
     "readme-package-icons": "^1.1.16",
+    "taze": "^0.18.0",
     "ts-paths-resolver": "^1.2.13",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
