--- a/package.json
+++ b/package.json
@@ -54,26 +54,26 @@
     "sync-icons": "bun generateReadmeIcons -h 50"
   },
   "dependencies": {
-    "@effect/platform": "^0.74.0",
-    "comment-json": "^4.2.5",
+    "@effect/platform": "0.74.0",
+    "comment-json": "4.2.5",
     "effect": "3.12.5",
-    "picocolors": "^1.1.1",
-    "yargs": "^17.7.2"
+    "picocolors": "1.1.1",
+    "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.10.2",
-    "@types/yargs": "^17.0.33",
-    "@vitest/coverage-v8": "^3.0.0",
-    "copyfiles": "^2.4.1",
-    "effect-errors": "^1.8.16",
-    "npm-check-updates": "^17.1.14",
-    "readme-package-icons": "^1.1.16",
-    "ts-paths-resolver": "^1.2.20",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.0",
-    "vitest-mock-extended": "^2.0.2"
+    "@biomejs/biome": "1.9.4",
+    "@types/node": "22.10.7",
+    "@types/yargs": "17.0.33",
+    "@vitest/coverage-v8": "3.0.3",
+    "copyfiles": "2.4.1",
+    "effect-errors": "1.8.16",
+    "npm-check-updates": "17.1.14",
+    "readme-package-icons": "1.1.16",
+    "ts-paths-resolver": "1.2.20",
+    "tsx": "4.19.2",
+    "typescript": "5.7.3",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.0.3",
+    "vitest-mock-extended": "2.0.2"
   }
 }
