--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
         id: release
         with:
           release-type: node
+          config-file: "release-please/config.json"
+          manifest-file: "release-please/manifest.json"
 
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
