--- a/release-please/config.json
+++ b/release-please/config.json
@@ -1,5 +1,12 @@
 {
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "pull-request-title-pattern": "chore(main): 🚀 Release v${version}",
   "pull-request-header": "# 🚀 Release pull request",
-  "commit-search-depth": 100
+  "include-component-in-tag": false,
+  "include-v-in-tag": true,
+  "packages": {
+    ".": {
+      "release-type": "node"
+    }
+  }
 }
