--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
   "dependencies": {
     "@effect/platform": "0.78.0",
     "comment-json": "4.2.5",
-    "effect": "3.13.7",
     "picocolors": "1.1.1",
     "yargs": "17.7.2"
+  },
+  "peerDependencies": {
+    "effect": "3.13.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
