--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postbuild-esm": "echo '{\"type\": \"module\"}' > dist/esm/package.json",
     "postbuild": "bun run copy-package && bun run copy-readme && bun resolve-ts-paths-esm",
     "cli": "node ./dist/esm/cli/generate-badges.cli.js -o ./badges -c ./coverage/coverage-summary.json -p 'Test coverage'",
-    "dev-values": "tsx ./src/tests/generate-from-values.ts",
+    "dev-values": "bun ./src/tests/generate-from-values.ts",
     "type-check": "tsc --project tsconfig.type-check.json --noEmit",
     "format": "biome format --write ./src",
     "format-ci": "biome format ./src",
@@ -54,25 +54,24 @@
     "sync-icons": "bun generateReadmeIcons -h 50"
   },
   "dependencies": {
-    "@effect/platform": "0.80.21",
     "comment-json": "4.2.5",
+    "effect-errors": "1.10.11",
     "picocolors": "1.1.1",
     "yargs": "17.7.2"
   },
   "peerDependencies": {
-    "effect": "3.14.20"
+    "@effect/platform": "0.x",
+    "effect": "3.x"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/node": "22.15.16",
+    "@types/node": "22.15.18",
     "@types/yargs": "17.0.33",
     "@vitest/coverage-v8": "3.1.3",
     "copyfiles": "2.4.1",
-    "effect-errors": "1.10.6",
     "npm-check-updates": "18.0.1",
     "readme-package-icons": "1.2.1",
-    "ts-paths-resolver": "1.2.60",
-    "tsx": "4.19.4",
+    "ts-paths-resolver": "1.2.63",
     "typescript": "5.8.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.1.3",
