--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.5/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "files": {
     "includes": ["**", "!src/tests/mock-data/frozen-dist"]
   },
@@ -219,6 +219,9 @@
       "quoteStyle": "single",
       "semicolons": "always",
       "indentStyle": "space"
+    },
+    "assist": {
+      "enabled": true
     }
   },
   "assist": {
