--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,22 +22,22 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: 🛰️ Release please
-        uses: googleapis/release-please-action@v4
+        uses: googleapis/release-please-action@c2a5a2bd6a758a0937f1ddb1e8950609867ed15c # v4.3.0
         id: release
         with:
           config-file: release-please/config.json
           manifest-file: release-please/manifest.json
 
       - name: ⬇️ Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         if: ${{ steps.release.outputs.release_created }}
 
       - name: 📦 Setup bun
-        uses: oven-sh/setup-bun@v2
+        uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2.0.2
         if: ${{ steps.release.outputs.release_created }}
 
       - name: ⎔ Setup node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5.0.0
         if: ${{ steps.release.outputs.release_created }}
         with:
           node-version-file: '.node-version'
