--- a/package.json
+++ b/package.json
@@ -1,80 +1,81 @@
 {
-  "name": "node-coverage-badges",
-  "description": "Generating coverage badges from jest",
-  "version": "1.5.0",
-  "repository": "https://github.com/jpb06/node-coverage-badges.git",
-  "author": "jpb06 <jpb.06@outlook.com>",
-  "bin": {
-    "generateBadges": "./cjs/cli/generate-badges.cli.js",
-    "generateBadgesEsm": "./esm/cli/generate-badges.cli.js"
-  },
-  "engines": {
-    "node": ">=20.x"
-  },
-  "license": "MIT",
-  "type": "module",
-  "main": "./cjs/index.js",
-  "module": "./esm/index.js",
-  "types": "./dts/index.d.ts",
-  "exports": {
-    ".": {
-      "require": {
-        "types": "./dts/index.d.ts",
-        "default": "./cjs/index.js"
-      },
-      "import": {
-        "types": "./dts/index.d.ts",
-        "default": "./esm/index.js"
-      }
-    }
-  },
-  "scripts": {
-    "update-deps": "bun npm-check-updates --root --format group -i",
-    "cleanDist": "rm -rf ./dist",
-    "copy-package": "copyfiles package.json ./dist/",
-    "copy-readme": "copyfiles README.md ./dist/",
-    "build": "bun cleanDist && bun build-esm && bun build-cjs",
-    "build-for-test": "rm -rf ./src/tests/mock-data/frozen-dist && tsc --project tsconfig.esm.json --outDir ./src/tests/mock-data/frozen-dist/esm --declarationDir ./src/tests/mock-data/frozen-dist/dts && tsc --project tsconfig.cjs.json --outDir ./src/tests/mock-data/frozen-dist/cjs",
-    "build-esm": "tsc --project tsconfig.esm.json",
-    "build-cjs": "tsc --project tsconfig.cjs.json",
-    "postbuild-cjs": "echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
-    "postbuild-esm": "echo '{\"type\": \"module\"}' > dist/esm/package.json",
-    "postbuild": "bun run copy-package && bun run copy-readme && bun resolve-ts-paths-esm",
-    "cli": "node ./dist/esm/cli/generate-badges.cli.js -o ./badges -c ./coverage/coverage-summary.json -p 'Test coverage' -d true",
-    "dev-values": "bun ./src/tests/generate-from-values.ts",
-    "type-check": "tsc --project tsconfig.type-check.json --noEmit",
-    "format": "biome format --write ./src",
-    "format-ci": "biome format ./src",
-    "lint": "biome lint ./src",
-    "lint-fix": "biome lint --write ./src",
-    "test": "vitest",
-    "test-ci": "vitest --coverage --run",
-    "test-dev": "vitest --coverage",
-    "test-coverage": "vitest run --coverage",
-    "sync-icons": "bun generateReadmeIcons -h 50"
-  },
-  "dependencies": {
-    "comment-json": "4.2.5",
-    "effect-errors": "1.10.14",
-    "picocolors": "1.1.1",
-    "yargs": "18.0.0"
-  },
-  "peerDependencies": {
-    "@effect/platform": "0.x",
-    "effect": "3.x"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.1.1",
-    "@types/node": "24.0.13",
-    "@types/yargs": "17.0.33",
-    "@vitest/coverage-v8": "3.2.4",
-    "copyfiles": "2.4.1",
-    "npm-check-updates": "18.0.1",
-    "readme-package-icons": "1.2.2",
-    "ts-paths-resolver": "1.2.68",
-    "typescript": "5.8.3",
-    "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.4",
-    "vitest-mock-extended": "3.1.0"
-  }
+	"name": "node-coverage-badges",
+	"description": "Generating coverage badges from jest",
+	"version": "1.5.0",
+	"repository": "https://github.com/jpb06/node-coverage-badges.git",
+	"author": "jpb06 <jpb.06@outlook.com>",
+	"bin": {
+		"generateBadges": "./cjs/cli/generate-badges.cli.js",
+		"generateBadgesEsm": "./esm/cli/generate-badges.cli.js"
+	},
+	"engines": {
+		"node": ">=20.x"
+	},
+	"license": "MIT",
+	"type": "module",
+	"main": "./cjs/index.js",
+	"module": "./esm/index.js",
+	"types": "./dts/index.d.ts",
+	"exports": {
+		".": {
+			"require": {
+				"types": "./dts/index.d.ts",
+				"default": "./cjs/index.js"
+			},
+			"import": {
+				"types": "./dts/index.d.ts",
+				"default": "./esm/index.js"
+			}
+		}
+	},
+	"scripts": {
+		"update-deps": "bun npm-check-updates --root --format group -i",
+		"cleanDist": "rm -rf ./dist",
+		"copy-package": "copyfiles package.json ./dist/",
+		"copy-readme": "copyfiles README.md ./dist/",
+		"build": "bun cleanDist && bun build-esm && bun build-cjs",
+		"build-for-test": "rm -rf ./src/tests/mock-data/frozen-dist && tsc --project tsconfig.esm.json --outDir ./src/tests/mock-data/frozen-dist/esm --declarationDir ./src/tests/mock-data/frozen-dist/dts && tsc --project tsconfig.cjs.json --outDir ./src/tests/mock-data/frozen-dist/cjs",
+		"build-esm": "tsc --project tsconfig.esm.json",
+		"build-cjs": "tsc --project tsconfig.cjs.json",
+		"postbuild-cjs": "echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
+		"postbuild-esm": "echo '{\"type\": \"module\"}' > dist/esm/package.json",
+		"postbuild": "bun run copy-package && bun run copy-readme && bun resolve-ts-paths-esm",
+		"cli": "node ./dist/esm/cli/generate-badges.cli.js -o ./badges -c ./coverage/coverage-summary.json -p 'Test coverage' -d true",
+		"dev-values": "bun ./src/tests/generate-from-values.ts",
+		"type-check": "tsc --project tsconfig.type-check.json --noEmit",
+		"check": "biome check .",
+		"format": "biome format --write .",
+		"format-ci": "biome format .",
+		"lint": "biome lint .",
+		"lint-fix": "biome lint --write .",
+		"test": "vitest",
+		"test-ci": "vitest --coverage --run",
+		"test-dev": "vitest --coverage",
+		"test-coverage": "vitest run --coverage",
+		"sync-icons": "bun generateReadmeIcons -h 50"
+	},
+	"dependencies": {
+		"comment-json": "4.2.5",
+		"effect-errors": "1.10.14",
+		"picocolors": "1.1.1",
+		"yargs": "18.0.0"
+	},
+	"peerDependencies": {
+		"@effect/platform": "0.x",
+		"effect": "3.x"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.1.1",
+		"@types/node": "24.0.13",
+		"@types/yargs": "17.0.33",
+		"@vitest/coverage-v8": "3.2.4",
+		"copyfiles": "2.4.1",
+		"npm-check-updates": "18.0.1",
+		"readme-package-icons": "1.2.2",
+		"ts-paths-resolver": "1.2.68",
+		"typescript": "5.8.3",
+		"vite-tsconfig-paths": "5.1.4",
+		"vitest": "3.2.4",
+		"vitest-mock-extended": "3.1.0"
+	}
 }
