--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"build-cjs": "tsc --project tsconfig.cjs.json",
 		"postbuild-cjs": "echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
 		"postbuild-esm": "echo '{\"type\": \"module\"}' > dist/esm/package.json",
-		"postbuild": "bun run copy-package && bun run copy-readme && bun resolve-ts-paths-esm",
+		"postbuild": "bun run copy-package && bun run copy-readme && bun run resolve-ts-paths-esm --debug true",
 		"cli": "node ./dist/esm/cli/generate-badges.cli.js -o ./badges -c ./coverage/coverage-summary.json -p 'Test coverage' -d true",
 		"dev-values": "bun ./src/tests/generate-from-values.ts",
 		"type-check": "tsc --project tsconfig.type-check.json --noEmit",
