--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "node-coverage-badges",
 	"description": "Generating coverage badges from jest",
 	"version": "1.6.0",
-	"repository": "https://github.com/jpb06/node-coverage-badges.git",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/jpb06/node-coverage-badges"
+	},
 	"author": "jpb06 <jpb.06@outlook.com>",
 	"bin": {
 		"generateBadges": "./cjs/cli/generate-badges.cli.js",
